fix: adicionado log para o cwd e shell para deploy

--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "node-html-to-image": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
-    "thymeleaf": "^0.20.5"
+    "rxjs": "^6.6.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
